<resources>
    <string name="app_name">CuidaPill</string>
    <string name="action_settings">Configuración</string>
    <string name="action_map">Mapa</string>
    <string name="cancelar">Cancelar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Tus medicamentos</string>
    <string name="second_fragment_label">Mis medicamentos</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="medicamento_info">Información</string>

    <!-- Strings del fragmento DatosMedicamento -->
    <string name="medicamento">Crear medicamento</string>
    <string name="nombre_med">Nombre del medicamento</string>
    <string name="agregar_nombre">Agrega el nombre</string>
    <string name="agregar_concentracion">Agrega la concentración</string>
    <string name="agregar_descripcion">Agrega una descripción</string>
    <string name="forma">Forma</string>
    <string name="color">Color</string>
    <string name="concentracion">Concentración</string>
    <string name="descripcion">Descripción</string>
    <string name="unidad">Unidad</string>
    <string name="seleccioneForma">Seleccione una forma</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="obligatorios">Obligatorios</string>
    <string name="siguiente">Siguiente</string>

    <!-- Strings del fragmento FrecuenciaMedicamento -->
    <string name="cuando_tomar">¿Cuándo lo debes tomar?</string>
    <string name="frecuencia">Frecuencia</string>

    <string-array name="frecuencias">
        <item>Todos los días</item>
        <item>En intervalos regulares</item>
        <item>En días de la semana específicos</item>
        <item>Según necesidad</item>
    </string-array>

    <string-array name="dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>

    <string name="listo">Listo</string>
    <string name="intervalo">Elige el intervalo</string>
    <string name="cada">Cada</string>
    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="hora_dia">Hora del día</string>
    <string name="elige_dias">Elige los días</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>

    <!-- Strings del channel notification -->
    <string name="channel_name">com.example.medicatrack.NOTIFICACION_MEDICAMENTO</string>
    <string name="channel_description">Canal para las notificaciones de consumo de medicamento</string>
    <string name="channel_id">com.example.medicatrack.CANAL_MEDICAMENTO</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Preferences -->
    <string name="notificaciones">Notificaciones</string>
    <string name="summary_not">Recibir notificaciones para registrar sus medicamentos.
    </string>
    <string name="title_not">Registro de sus medicamentos</string>
</resources>