<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation2">

    <navigation android:id="@+id/navigation2"
        app:startDestination="@id/FirstFragment">
        <fragment
            android:id="@+id/FirstFragment"
            android:name="com.example.medicatrack.MainFragment"
            android:label="@string/first_fragment_label"
            tools:layout="@layout/fragment_main">

            <action
                android:id="@+id/action_FirstFragment_to_SecondFragment"
                app:destination="@id/SecondFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        </fragment>

        <fragment
            android:id="@+id/SecondFragment"
            android:name="com.example.medicatrack.RegistroFragment"
            android:label="@string/second_fragment_label"
            tools:layout="@layout/fragment_registro">

            <action
                android:id="@+id/action_SecondFragment_to_FirstFragment"
                app:destination="@id/FirstFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        </fragment>

        <action
            android:id="@+id/action_global_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_global_medicamentoInfoFragment"
            app:destination="@id/medicamentoInfoFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    </navigation>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.medicatrack.SettingsFragment"
        android:label="Configuración" />
    <fragment
        android:id="@+id/medicamentoInfoFragment"
        android:name="com.example.medicatrack.MedicamentoInfoFragment"
        android:label="@string/medicamento_info"
        tools:layout="@layout/medicamento_info" />
</navigation>