<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cont_fecha_hora">

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fecha_inicio"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toStartOf="@id/txtHora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txtHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hora_dia"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtFecha"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toStartOf="@id/textFieldHora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFecha"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="Fecha"
            android:textColor="@color/seleccionar"
            android:inputType="none"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textFieldFecha"
        app:layout_constraintTop_toBottomOf="@id/txtHora"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="Hora"
            android:inputType="none"
            android:focusable="false"
            android:textColor="@color/seleccionar"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/obligatorio"
        android:textColor="?attr/colorError"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/errHora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFecha"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/errHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/obligatorio"
        android:textColor="?attr/colorError"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/errFecha"
        app:layout_constraintTop_toBottomOf="@+id/textFieldHora"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>